[tool.poetry]
name = "data-analytics-environment-template"
version = "0.1.0"
description = ""
authors = ["Kuautli <cuauhtemocbe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
